--- a/src/components/customer/mypage-edit/Edit.module.scss
+++ b/src/components/customer/mypage-edit/Edit.module.scss
@@ -41,6 +41,31 @@
   box-shadow: 1px 1px 10px 0 rgba(72, 75, 108, .08);
   background-color: #fff;
   box-sizing: border-box;
+  .preferred {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+    li {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+
+      span {
+        margin-top: 10px;
+      }
+      .xmark {
+        position: absolute;
+        top: -18px;
+        right: -18px;
+        font-size: 25px;
+        color: #ee7676;
+        cursor: pointer;
+      }
+    }
+  }
 }
 
 .input-area {
@@ -98,5 +123,36 @@
   box-shadow: rgba(38, 37, 37, 0.58) 2px 5px 10px 18px;
   border-radius: 50%;
   font-size: 30px;
+}
+
+.edit-wrapper {
+  padding: 20px;
+  border-radius: 0 0 12px 12px;
+  box-shadow: 1px 1px 10px 0 rgba(72, 75, 108, .08);
+  border: solid 1px #e3e9ed;
+  background-color: #fff;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+}
+
+.img-box {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: white 0 0 0 2px;
+  transform: translateZ(0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    object-fit: cover;
+    transition: transform 0.5s;
+  }
 }
 
