--- a/src/components/customer/mypage-edit/SideBar.module.scss
+++ b/src/components/customer/mypage-edit/SideBar.module.scss
@@ -3,6 +3,7 @@ a {
   text-decoration: none;
 }
 
+
 ul {
   margin-top: 40px;
   padding: 10px;
@@ -15,7 +16,6 @@ ul {
 li {
   margin: 5px 0;
   opacity: .9;
-  /*width: inherit;*/
 }
 
 .container {
@@ -35,6 +35,11 @@ li {
   padding: 0 17px;
   background-color: #fff;
   box-sizing: border-box;
+  h2 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 20px;
+  }
 }
 
 .nav {
