--- a/src/components/StoreRegister/StoreRegisterForm.module.scss
+++ b/src/components/StoreRegister/StoreRegisterForm.module.scss
@@ -1,4 +1,6 @@
+ // 폰트: 프리텐다드
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css");
+
 .registration {
   background-color: #fff;
   border-radius: 10px;
@@ -24,31 +26,40 @@
     font-weight: 700;
   }
   input, select {
+    //border: 1px solid blueviolet;
     width: 70%;
-    margin: 0 auto;
-  }
-  input {
+    margin: 0 auto 30px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 30px;
+    //margin-bottom: 30px;
   }
-  select {
-    //width: 100%;
-    height: 30px;
-    margin-bottom: 40px;
+  input, select {
+
+    &:focus {
+      border: 1px solid #2fd067;
+      box-shadow: 1px 2px 3px rgba(79, 215, 127, 0.3);
+      outline: none;
+    }
   }
+  //select {
+  //  //width: 100%;
+  //  height: 35px;
+  //  margin-bottom: 40px;
+  //  border-radius: 5px;
+  //}
 
   .btn-approval {
     //box-shadow:inset 0px 1px 0px 0px #a4e271;
-    background: linear-gradient(45deg, #43e97b 0%, #38f9d7 100%);
+    //background: linear-gradient(45deg, #43e97b 0%, #38f9d7 100%);
+    background: #43e996;
     border-radius:6px;
     //border:1px solid mediumvioletred;
     display:block;
     cursor:pointer;
     //color:#ffffff;
     color:var(--color-gray-600);
-    font-size:1rem;
+    font-size: 1.1rem;
     font-weight:bold;
     padding:15px 35px;
     text-decoration:none;
@@ -56,19 +67,16 @@
     text-align: center;
     position: relative;
     left: 50%;
-    transform: translateX(-60%);
-    margin-bottom: 60px;
-    transition: 300ms;
+    transform: translateX(-50%);
+    //margin-bottom: 60px;
+    margin: 30px 0 50px;
+    //transition: 300ms;
     width: 200px;
 
 
-    &hover {
-      background:linear-gradient(to bottom, #43e97b 0%, #38f9d7 100%);
+    &:hover, &:active {
+      background:linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
       //border:1px solid #43e97b;
-    }
-    &active {
-      position:relative;
-      top:1px;
     }
   }
 }
