--- a/src/components/mainPage/FoodNav.module.scss
+++ b/src/components/mainPage/FoodNav.module.scss
@@ -6,7 +6,8 @@
 }
 
 .App-header .title{
-  margin: 100px 0;
+  margin: 80px 0;
+  // background-color: aqua;
 }
 
 .App-header h1 {
@@ -16,7 +17,7 @@
 }
 
 .App-header p {
-  font-size: 25px;
+  font-size: 20px;
   margin-top: 20px;
 }
 
@@ -42,4 +43,91 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  margin-bottom: 20px;
+}
+
+
+// 내가 찜한 가게 리스트 ===================================
+.list1{
+  margin: 0 auto;
+  position: relative;
+  background-color: beige;
+}
+.list1 .title1{
+  margin: 0 190px;
+  padding-top: 20px;
+  font-size: 30px;
+  font-weight: 600;
+}
+
+.favorite-store-list {
+  position: relative;
+  overflow: hidden;
+  max-width: 80%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+  // background-color: skyblue;
+}
+
+.storeList {
+  display: flex;
+  transition: transform 0.3s ease;
+  width: 400%;
+  height: 300px;
+  // background-color: purple;
+}
+
+.store-item {
+  flex: 0 0 25%; 
+  box-sizing: border-box;
+  padding: 10px 10px 0 10px;
+  text-align: center;
+}
+
+.store-item img {
+  width: 100%;
+  height: 70%;
+  object-fit: cover;
+  overflow: hidden;
+  display: block;
+}
+
+.store-item p{
+  height: 15%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.store-item .store-name{
+  font-size: 20px;
+  font-weight: 600;
+}
+.store-item .store-price{
+  font-size: 20px;
+  color: #7CAF74;
+  font-weight: 600;
+}
+
+.nav-button {
+  position: absolute;
+  top: 40%;
+  transform: translateY(-50%);
+  background-color: rgba(124, 175, 116, 0.8);;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  font-weight: 900;
+  padding: 10px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.nav-button.left {
+  left: 0;
+}
+
+.nav-button.right {
+  right: 0;
 }
