feature/modal-setup

--- a/src/pages/common/Modal.module.scss
+++ b/src/pages/common/Modal.module.scss
@@ -10,7 +10,7 @@
   background-color: rgb(0, 0, 0); // 검정 배경
   background-color: rgba(0, 0, 0, 0.4); // 불투명한 배경
 
-  .modal-content {
+  .modalContent {
     background-color: #fefefe;
     margin: 15% auto; // 화면 가운데 배치
     padding: 20px;
