--- a/src/pages/product/ProductDetailModal.module.scss
+++ b/src/pages/product/ProductDetailModal.module.scss
@@ -6,6 +6,7 @@
     background-position: center center;
     background-size: cover;
     padding-bottom: 0;
+    color: black;
 
     .wrapper {
       display: flex;
