--- a/src/components/mainPage/FoodNav.module.scss
+++ b/src/components/mainPage/FoodNav.module.scss
@@ -1,13 +1,10 @@
-
 .App-header {
   text-align: center;
-  // background-color: #f0f0f0;
   padding: 15px 0;
 }
 
-.App-header .title{
+.App-header .title {
   margin: 80px 0;
-  // background-color: aqua;
 }
 
 .App-header h1 {
@@ -32,13 +29,12 @@
   display: block;
 }
 
-
-.nav{
+.nav {
   width: 60%;
-  // background-color: red;
   margin: 0 auto;
 }
-.food-nav{
+
+.food-nav {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -46,47 +42,37 @@
   margin-bottom: 20px;
 }
 
-
-// 내가 찜한 가게 리스트 ===================================
-.list1{
+.list1 {
   margin: 0 auto;
   position: relative;
   background-color: beige;
+  width: 80%;
 }
-.list1 .title1{
-  margin: 0 190px;
-  padding-top: 20px;
-  font-size: 30px;
+
+.list1 .title1 {
+  padding: 20px 20px 0 20px;
+  font-size: 22px;
   font-weight: 600;
 }
 
 .favorite-store-list {
   position: relative;
   overflow: hidden;
-  max-width: 80%;
+  max-width: 100%;
   margin: 0 auto;
   display: flex;
   align-items: center;
   padding: 0 10px;
-  // background-color: skyblue;
 }
 
-.storeList {
-  display: flex;
-  transition: transform 0.3s ease;
-  width: 400%;
-  height: 300px;
-  // background-color: purple;
-}
-
-.store-item {
-  flex: 0 0 25%; 
+.storeItem {
+  flex: 0 0 25%;
   box-sizing: border-box;
   padding: 10px 10px 0 10px;
   text-align: center;
 }
 
-.store-item img {
+.storeItem img {
   width: 100%;
   height: 70%;
   object-fit: cover;
@@ -94,40 +80,29 @@
   display: block;
 }
 
-.store-item p{
+.storeItem p {
   height: 15%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.store-item .store-name{
+
+.storeItem .storeName {
   font-size: 20px;
   font-weight: 600;
 }
-.store-item .store-price{
+
+.storeItem .storePrice {
   font-size: 20px;
   color: #7CAF74;
   font-weight: 600;
 }
 
-.nav-button {
-  position: absolute;
-  top: 40%;
-  transform: translateY(-50%);
-  background-color: rgba(124, 175, 116, 0.8);;
-  color: white;
-  border: none;
-  border-radius: 10px;
-  font-weight: 900;
-  padding: 10px;
-  cursor: pointer;
-  z-index: 1;
-}
+// .swiper-button-next,
+// .swiper-button-prev {
+//   color: rgba(124, 175, 116, 0.8);
+// }
 
-.nav-button.left {
-  left: 0;
-}
-
-.nav-button.right {
-  right: 0;
-}
+// .swiper-pagination-bullet {
+//   background-color: rgba(124, 175, 116, 0.8);
+// }
