--- a/src/index.css
+++ b/src/index.css
@@ -41,9 +41,9 @@
 
 body {
   margin: 0;
-
+/* 
   min-height: 100vh;
-  display: flex;
+  display: flex; */
   flex-direction: column;
   align-items: center;
   justify-content: center;
