--- a/src/components/StoreRegister/ProductRegisterForm.module.scss
+++ b/src/components/StoreRegister/ProductRegisterForm.module.scss
@@ -4,34 +4,43 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px;
-  border: 2px dashed #43e97b;
+  //padding: 20px 0;
+  padding: 10px;
+  border: 1px solid var(--color-gray-300);
+  //border: 2px solid #43e97b;
   border-radius: 10px;
   text-align: center;
   color: #aaa;
   font-size: 1.2em;
   position: relative;
   cursor: pointer;
-  margin: 30px 0 30px;
+  margin: 0 0 30px;
+  background: #f4f8f7;
 
   input[type="file"] {
     display: none;
   }
   label {
     cursor: pointer;
-    color: #43e97b;
+    //color: #43e97b;
+    color: #bbb;
+    //height: 400px;
+    width: 650px;
     height: 400px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid red;
+    white-space:pre-wrap;
+    text-align: center;
+    //border: 1px solid red;
+
   }
 }
 
 .image-preview {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 10px;
+  //margin-top: 10px;
   width: 100%;
   justify-content: center;
   background: var(--color-gray-300);
@@ -48,4 +57,40 @@
     border-radius: 5px;
   }
 }
+.chips {
+  display: flex;
+  flex-direction: row;
+  //justify-content: space-between;
+  align-content: center;
+  width: 75%;
+  margin: 8px auto 30px;
+  //margin: 8px 0 30px;
+  //border: 1px solid red;
+  gap: 15px;
 
+  .chip{
+    width: 100px;
+    //color: #ffffff;
+    font-size: 1rem;
+    color: var(--color-gray-400);
+    //font-weight: 700;
+    background: #ffffff;
+    border: 1px solid var(--color-gray-400);
+    padding: 10px 20px;
+    border-radius: 20px;
+    text-align: center;
+
+    &:hover {
+      color: #ffffff;
+      font-weight: 500;
+      border: 1px solid #43e97b;
+      background: #43e97b;
+    }
+  }
+  .picked {
+    color: #43e97b;
+    font-weight: 500;
+    border: 1px solid #43e97b;
+    background: #e3ffef;
+  }
+}
