--- a/src/components/StoreRegister/StoreRegisterForm.module.scss
+++ b/src/components/StoreRegister/StoreRegisterForm.module.scss
@@ -9,38 +9,57 @@
   position: relative;
   color: #4b4a47;
   //border: 1px solid lawngreen;
-  width: 800px;
+  width: 750px;
   margin: 0 auto;
   text-align: left;
   font-family: "Pretendard Variable", Pretendard, sans-serif ;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 
   h2 {
     font-weight: 700;
     font-size: 1.2rem;
     margin-top: 30px;
-    margin-bottom: 60px;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+  h3 {
+    font-size: 1.1rem;
+    margin-bottom: 30px;
+    text-align: center;
   }
   label {
     display: block;
-    margin: 0 0 5px 5px;
+    //margin: 0 0 5px 5px;
     font-weight: 700;
+    width: 75%;
+    margin: 0 auto 5px;
   }
   input, select {
     //border: 1px solid blueviolet;
-    width: 70%;
+    width: 75%;
     margin: 0 auto 30px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     //margin-bottom: 30px;
-  }
-  input, select {
+    font-family: "Pretendard Variable", Pretendard, sans-serif;
 
     &:focus {
-      border: 1px solid #2fd067;
-      box-shadow: 1px 2px 3px rgba(79, 215, 127, 0.3);
+      border: 2px solid #2fd067;
+      box-shadow: 1px 3px 5px rgba(100, 100, 100, 0.1);
       outline: none;
     }
+    & * {
+      font-family: "Pretendard Variable", Pretendard, sans-serif;
+      font-size: 16px;
+    }
+    &::placeholder {
+      font-family: "Pretendard Variable", Pretendard, sans-serif;
+      color: #ccc;
+    }
+
   }
   //select {
   //  //width: 100%;
@@ -59,7 +78,8 @@
     cursor:pointer;
     //color:#ffffff;
     color:var(--color-gray-600);
-    font-size: 1.1rem;
+    font-family: "Pretendard Variable", Pretendard, sans-serif;
+    font-size: 1rem;
     font-weight:bold;
     padding:15px 35px;
     text-decoration:none;
@@ -72,6 +92,7 @@
     margin: 30px 0 50px;
     //transition: 300ms;
     width: 200px;
+    border: 0;
 
 
     &:hover, &:active {
