--- a/src/components/store/mypage/Profile.module.scss
+++ b/src/components/store/mypage/Profile.module.scss
@@ -1,94 +1,103 @@
-a {
-  color: inherit;
-  text-decoration: none;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-}
-
-ul {
-  margin-top: 40px;
-  padding: 10px;
+.profileSection {
   display: flex;
   flex-direction: column;
-  width: 100%;
-  justify-content: center;
-}
-
-li {
-  margin: 5px 0;
-  opacity: .9;
-  /*width: inherit;*/
-}
-
-.container {
-  margin: 10px auto;
-  width: 100px;
-  border: 1px solid white;
-  position: relative;
-  height: 100px;
-}
-
-.profile {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 30%;
-  padding: 0 17px;
-  background-color: #fff;
-  box-sizing: border-box;
-  overflow: hidden;
-}
+  padding: 10px;
 
-.nav {
-  font-size: 21px;
-  text-align: center;
-  width: 335px;
-  margin-right: 10px;
-}
+  .profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-.nav-link {
-  width: 335px;
-  padding-top: .6rem;
-  padding-bottom: .6rem;
-  border-radius: .75rem;
-  font-weight: 600;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  &:hover {
-    background-color: rgb(224, 238, 224);
-  }
-}
-
-.stats {
-  font-size: 18px;
-  display: flex;
-  justify-content: space-around;
-  margin-top: 20px;
-  flex-direction: column;
-
-  div {
-    padding: 20px;
-    width: 100%;
-    margin-bottom: 10px;
-    text-align: center;
-    transition: transform 0.3s, box-shadow 0.3s;
-    border-radius: 15px;
-    margin-top: 20px;
-
-    &:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 5px 13px rgba(0, 0, 0, 0.2);
-      font-size: 19px;
+    .imgBox {
+      display: block;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      overflow: hidden;
+      box-shadow: white 0 0 0 2px;
+      transform: translateZ(0);
+      margin-top: 50px;
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        object-fit: cover;
+        transition: transform 0.5s;
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
     }
-    div {
+
+    h2 {
+      font-size: 24px;
+      font-weight: bold;
+      margin-top: 20px;
+    }
+
+    p {
       font-size: 16px;
-      /*box-shadow: 0 4px 2px rgba(0, 0, 0, 0.1);*/
-      background: linear-gradient(135deg, #fdfcfc, #f1f8ee);
-      /*border: 2px solid #d4f593;*/
       margin-top: 10px;
+    }
+
+    .nav {
+      font-size: 18px;
+      margin-top: 20px;
+      display: flex;
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+
+      .navItem {
+        width: 100%;
+
+        .navLink {
+          padding: 10px 0;
+          display: block;
+          width: 100%;
+          border-radius: .75rem;
+          font-weight: 600;
+
+          &:hover {
+            color: rgba(8, 10, 8, 1);
+            background: linear-gradient(135deg, #e0eee0, #dff3d8);
+          }
+        }
+      }
+    }
+  }
+
+  .stats {
+    font-size: 18px;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+    flex-direction: column;
+
+    .statsBox {
+      background: #fff;
+      margin: 20px 0;
+      padding: 20px;
+      width: 100%;
+      margin-bottom: 10px;
+      text-align: center;
+      transition: transform 0.3s, box-shadow 0.3s;
+      border-radius: 15px;
+
+      &:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 5px 13px rgba(0, 0, 0, 0.2);
+        font-size: 19px;
+      }
+
+      div {
+        font-size: 16px;
+        background: linear-gradient(135deg, #fdfcfc, #f1f8ee);
+        margin: 10px 0;
+        padding: 20px;
+      }
     }
   }
 }
