--- a/src/pages/store/StoreMyPage.module.scss
+++ b/src/pages/store/StoreMyPage.module.scss
@@ -1,11 +1,15 @@
 .myPageArea {
   width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  //background-color: #fff;
+  color: #111;
 
   .container {
     width: 80%;
+    height: 100%;
     border: 1px solid #ccc;
     border-radius: 15px;
     margin: 20px auto 0;
