--- a/src/pages/store/StoreMyPage.module.scss
+++ b/src/pages/store/StoreMyPage.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  //background-color: #fff;
+  background-color: #fff;
   color: #111;
 
   .container {
