# 가게 스케쥴

--- a/src/components/store/mypage/ReservationList.module.scss
+++ b/src/components/store/mypage/ReservationList.module.scss
@@ -17,7 +17,7 @@
         font-weight: 700;
         line-height: 20px;
         color: #1d1d1d;
-        background: #e4f3da;
+        background: linear-gradient(135deg, #f6f9f4, #e4f3da);
         border-radius: 15px 15px 0 0;
         padding: 10px 15px;
         display: flex;
