--- a/src/components/auth/SignUpForm.module.scss
+++ b/src/components/auth/SignUpForm.module.scss
@@ -12,39 +12,41 @@
   border-radius: 8px; /* 이미지 박스의 모서리 둥글게 */
   overflow: hidden; /* 박스 안으로 이미지 잘라내기 */
   cursor: pointer; /* 마우스 커서 포인터로 변경 */
+}
 
-  input {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 2;
-  }
+  // input {
+  //   position: absolute;
+  //   top: 10px;
+  //   right: 10px;
+  //   z-index: 2;
+  // }
 
-  label {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+  // label {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   justify-content: center;
+  //   width: 100%;
+  //   height: 100%;
 
-    span {
-      margin-bottom: 5px; /* 이미지 위의 텍스트와 이미지 간격 */
-      font-size: 16px; /* 텍스트 크기 조절 */
-      font-weight: bold;
-    }
+    // span {
+    //   margin-bottom: 5px; /* 이미지 위의 텍스트와 이미지 간격 */
+    //   font-size: 16px; /* 텍스트 크기 조절 */
+    //   font-weight: bold;
+    // }
 
     .food-image {
-      width: 100%;
-      height: 100%;
+      width: 100px;
+      height: 100px;
       object-fit: cover; /* 이미지 비율 유지하면서 박스 크기에 맞춤 */
-    }
-  }
+    
+  
 
   &.checked {
     border-color: #007bff; /* 선택된 음식 박스 테두리 색상 */
   }
 }
+
 
 
 //$green1-color: #your-green1-color; // 백엔드 css 가져오기
