# 스타일 수정

--- a/src/components/store/mypage/ProductCount.module.scss
+++ b/src/components/store/mypage/ProductCount.module.scss
@@ -59,6 +59,7 @@
 
   .productCountWrapper {
     border-radius: 0 0 15px 15px;
+    border: solid 1px #e3e9ed;
     box-shadow: 1px 1px 10px 0 rgba(72, 75, 108, .08);
 
     .productCountStatusWithImg {
