--- a/src/components/store/mypage/Calendar.module.scss
+++ b/src/components/store/mypage/Calendar.module.scss
@@ -30,12 +30,13 @@
 }
 
 .calendarSection {
-  position: relative; /* 부모 요소에 상대 위치 지정 */
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
   border-radius: 0 0 15px 15px;
+  border: solid 1px #e3e9ed;
   box-shadow: 1px 1px 10px 0 rgba(72, 75, 108, .08);
 }
 
@@ -44,7 +45,7 @@
   font-weight: bold;
   display: flex;
   align-items: center;
-  justify-content: center; /* 가운데 정렬 추가 */
+  justify-content: center;
   padding: 50px 0 40px 0;
 
   .calendarButton {
