--- a/src/components/customer/mypage/Profile.module.scss
+++ b/src/components/customer/mypage/Profile.module.scss
@@ -7,6 +7,8 @@ a:link, a:visited {
   flex-direction: column;
   width: 30%;
   padding: 10px;
+  background: #fff;
+  border-radius: 15px 0 0 15px;
 
   .profile {
     display: flex;
