# customer-mypage: 선호 지역

--- a/src/pages/customer/CustomerMyPage.module.scss
+++ b/src/pages/customer/CustomerMyPage.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  //background-color: #fff;
+  background-color: #fff;
   color: #111;
 
   .container {
