--- a/src/components/customer/mypage/CustomerReservationList.module.scss
+++ b/src/components/customer/mypage/CustomerReservationList.module.scss
@@ -1,6 +1,6 @@
 .ReservationListForm {
   width: 100%;
-  padding: 45px 15px;
+  padding: 45px 15px 15px 15px;
   margin: 20px auto;
   position: relative;
   display: block;
@@ -25,7 +25,7 @@
 
   .infoWrapper {
     padding: 10px;
-    border-radius: 12px;
+    border-radius: 0 0 15px 15px;
     box-shadow: 1px 1px 10px 0 rgba(72, 75, 108, .08);
     border: solid 1px #e3e9ed;
     background-color: #fff;
