style/modal font color

--- a/src/pages/common/Modal.module.scss
+++ b/src/pages/common/Modal.module.scss
@@ -11,6 +11,7 @@
   background-color: rgba(0, 0, 0, 0.4); // 불투명한 배경
 
   .modalContent {
+    color: black;
     background-color: #fefefe;
     margin: 15% auto; // 화면 가운데 배치
     padding: 20px;
