# customer-mypage: 선호 음식

--- a/src/components/customer/mypage/CustomerReservationList.module.scss
+++ b/src/components/customer/mypage/CustomerReservationList.module.scss
@@ -34,7 +34,7 @@
   }
   .reservation {
     border-radius: 0 0 15px 15px;
-    height: 260px;
+    //height: 260px;
     //overflow: scroll;
   }
 
