--- a/src/components/customer/mypage/FavoriteStore.module.scss
+++ b/src/components/customer/mypage/FavoriteStore.module.scss
@@ -33,35 +33,43 @@
   box-sizing: border-box;
   margin-bottom: 10px;
 
-  .infoList {
+  .store {
     list-style: none;
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
 
-    .store {
-      li {
+    li {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 10px 0;
+
+      .imgBox {
+        width: 100px;
+        height: 100px;
+        border-radius: 5px;
+        overflow: hidden;
+        box-shadow: white 0 0 0 2px;
         display: flex;
+        justify-content: center;
         align-items: center;
-        padding: 5px 0;
 
-        .imgBox {
-          width: 50px;
-          height: 50px;
-          border-radius: 5px;
-          overflow: hidden;
-          box-shadow: white 0 0 0 2px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          margin-right: 10px;
-
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.5s;
-          }
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          transition: transform 0.5s;
         }
+      }
+
+      span {
+        text-align: center;
+        font-size: 16px;
+        margin-top: 10px;
       }
     }
   }
