--- a/src/components/customer/mypage/PreferredArea.module.scss
+++ b/src/components/customer/mypage/PreferredArea.module.scss
@@ -32,7 +32,13 @@
     box-sizing: border-box;
     margin-bottom: 10px;
 
+
       .infoList {
+        display: flex;
+        flex-direction: row;
+        gap: 20px;
+        align-items: center;
+        justify-content: center;
         list-style: none;
         padding: 0;
         margin: 0;
