--- a/src/components/customer/mypage/PreferredFood.module.scss
+++ b/src/components/customer/mypage/PreferredFood.module.scss
@@ -21,49 +21,56 @@
     margin-top: 10px;
     font-size: 20px;
     font-weight: 700;
-
   }
 }
 
 .infoWrapper {
   padding: 10px;
   border-radius: 0 0 15px 15px;
-  //height: 260px;
   box-shadow: 1px 1px 10px 0 rgba(72, 75, 108, .08);
   border: solid 1px #e3e9ed;
   background-color: #fff;
   box-sizing: border-box;
   margin-bottom: 10px;
 
-  .infoList {
+  .food {
     list-style: none;
     padding: 0;
     margin: 0;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: center;
 
-    .food {
-      li {
+    li {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 10px 0;
+
+      .imgBox {
+        width: 100px;
+        height: 100px;
+        border-radius: 5px;
+        overflow: hidden;
+        box-shadow: white 0 0 0 2px;
         display: flex;
+        justify-content: center;
         align-items: center;
-        padding: 5px 0;
+        margin-bottom: 10px;
 
-        .imgBox {
-          width: 50px;
-          height: 50px;
-          border-radius: 5px;
-          overflow: hidden;
-          box-shadow: white 0 0 0 2px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          margin-right: 10px;
-
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.5s;
-          }
+        .foodImage {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          transition: transform 0.5s;
         }
+      }
+
+      span {
+        text-align: center;
+        font-size: 16px;
+        margin-top: 10px;
       }
     }
   }
