#common scss file add

--- a/src/components/auth/LoginForm.module.scss
+++ b/src/components/auth/LoginForm.module.scss
@@ -1,4 +1,3 @@
-/* LoginForm.module.scss */
 
 .container {
   width: 80%;
@@ -47,6 +46,7 @@ header {
     }
 
     input {
+      color: black;
       display: block;
       width: 100%;
       height: 50px;
