--- a/src/components/customer/mypage-edit/Edit.module.scss
+++ b/src/components/customer/mypage-edit/Edit.module.scss
@@ -138,7 +138,7 @@
 .img-box {
   width: 100px;
   height: 100px;
-  border-radius: 50%;
+  border-radius: 5px;
   overflow: hidden;
   box-shadow: white 0 0 0 2px;
   transform: translateZ(0);
