--- a/src/pages/common/Modal.module.scss
+++ b/src/pages/common/Modal.module.scss
@@ -19,6 +19,7 @@
     border: 1px solid #888;
     width: 500px; // 너비 조절
     border-radius: 15px;
+    line-height: 2;
 
     .close {
       color: #aaa;
