--- a/src/components/auth/LoginForm.module.scss
+++ b/src/components/auth/LoginForm.module.scss
@@ -1,4 +1,3 @@
-
 .container {
   width: 80%;
   margin: 0 auto;
@@ -55,6 +54,8 @@ header {
       border: 1px solid var(--green1-color);
       border-radius: 10px;
       background-color: var(--white-color);
+      margin-right: 10px;
+
     }
 
     .wrapper {
@@ -90,16 +91,17 @@ header {
       .auto-login-check {
         margin-bottom: 10px;
       }
+    }
 
-      input {
-        margin-right: 10px;
-        width: 15px;
-        height: 15px;
-
+    .verify-link-sent {
+      h2 {
+        margin-bottom: 10px;
+        font-size: 14px;
       }
 
-      label {
-        font-size: 14px;
+      p {
+        font-size: 12px;
+        margin-bottom: 10px;
       }
     }
   }
