--- a/src/components/customer/mypage/CustomerReservationList.module.scss
+++ b/src/components/customer/mypage/CustomerReservationList.module.scss
@@ -1,6 +1,6 @@
 .reservationListForm {
   width: 100%;
-  height: 40vh; /* 세로 크기를 지정하여 스크롤이 생길 수 있게 함 */
+  height: 50vh;
   padding: 45px 15px 15px 15px;
   margin: 20px auto;
   position: relative;
@@ -32,8 +32,8 @@
     background-color: #fff;
     box-sizing: border-box;
     margin-bottom: 10px;
-    overflow: auto; /* 스크롤 생성 */
-    height: calc(100% - 75px); /* 위의 제목 부분을 제외한 나머지 공간 */
+    overflow: auto;
+    height: calc(100% - 75px);
   }
 
   .reservation {
@@ -108,6 +108,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 
   img {
     width: 100%;
@@ -115,19 +116,28 @@
     object-fit: cover;
     transition: transform 0.5s;
   }
-}
 
-.canceled {
-  color: red;
-}
+  .canceled {
 
-.done {
-  color: green;
-}
+    color: red;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+  }
 
-.loading {
-  color: blue;
-  animation: spin 3s linear infinite;
+  .done {
+    color: green;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+  }
+
+  .loading {
+    color: blue;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+  }
 }
 
 .reservationStatus {
@@ -154,10 +164,10 @@
   }
 }
 
-.placeholder {
-  width: 100px; /* 예약 취소 버튼과 동일한 크기 */
-  height: 40px;
-}
+//.placeholder {
+//  width: 100px; /* 예약 취소 버튼과 동일한 크기 */
+//  height: 40px;
+//}
 
 @keyframes spin {
   0% {
