--- a/src/components/store/mypage-edit/SideBar.module.scss
+++ b/src/components/store/mypage-edit/SideBar.module.scss
@@ -89,3 +89,16 @@ li {
   }
 }
 
+@media (max-width: 400px) {
+  .profile {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 10;
+    left:-100%;
+    transition: .40s ease-in-out 0s;
+    &.on {
+      left: 0;
+    }
+  }
+}
