--- a/src/components/StoreRegister/ProductRegisterForm.module.scss
+++ b/src/components/StoreRegister/ProductRegisterForm.module.scss
@@ -56,6 +56,19 @@
     border: 1px solid #ccc;
     border-radius: 5px;
   }
+  label {
+    position: absolute; /* 변경 */
+    top: 0; /* 추가 */
+    left: 0; /* 추가 */
+    width: 656px; /* 추가 */
+    height: 405px; /* 추가 */
+    opacity: 0;
+    cursor: pointer;
+    z-index: 1;
+    //opacity: 0;
+    //position: relative;
+    //z-index: 1;
+  }
 }
 .chips {
   display: flex;
@@ -67,6 +80,7 @@
   //margin: 8px 0 30px;
   //border: 1px solid red;
   gap: 15px;
+
 
   label.chip{
     display: block;
@@ -96,14 +110,12 @@
   }
 
   .radioInput {
-    //position: absolute;
-    //appearance: none;
     width: 1px;
     height: 1px;
     margin: -1px;
     overflow: hidden;
-    //opacity: 0;
-    //display: none;
+    margin: 0;
+    padding: 0;
   }
 
 }
