style profile img box 위치
- customer/store 프로필 수정 박스 위치

--- a/src/components/store/mypage-edit/Edit.module.scss
+++ b/src/components/store/mypage-edit/Edit.module.scss
@@ -64,5 +64,9 @@
 @media (max-width: 400px) {
   .edit {
     width: 100%;
+    .edit-wrapper {
+      flex-direction: column-reverse;
+      align-items: center;
+    }
   }
 }
