--- a/src/components/mainPage/FoodNav.module.scss
+++ b/src/components/mainPage/FoodNav.module.scss
@@ -1,50 +1,38 @@
 
-.App-header {
-  text-align: center;
-  // background-color: #f0f0f0;
-  padding: 15px 0;
-}
+// .App-header {
+//   text-align: center;
+//   // background-color: #f0f0f0;
+//   padding: 15px 0;
+// }
 
-.App-header .title{
-  margin: 80px 0;
-  // background-color: aqua;
-}
+// .App-header .title{
+//   margin: 80px 0;
+//   // background-color: aqua;
+// }
 
-.App-header h1 {
-  font-size: 30px;
-  margin-bottom: 10px;
-  font-weight: 600;
-}
+// .App-header h1 {
+//   font-size: 30px;
+//   margin-bottom: 10px;
+//   font-weight: 600;
+// }
 
-.App-header p {
-  font-size: 20px;
-  margin-top: 20px;
-}
+// .App-header p {
+//   font-size: 20px;
+//   margin-top: 20px;
+// }
 
-.banner {
-  max-width: 100%;
-  margin-bottom: 20px;
-}
+// .banner {
+//   max-width: 100%;
+//   margin-bottom: 20px;
+// }
 
-.banner img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
+// .banner img {
+//   width: 100%;
+//   height: auto;
+//   display: block;
+// }
 
 
-.nav{
-  width: 60%;
-  // background-color: red;
-  margin: 0 auto;
-}
-.food-nav{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  margin-bottom: 20px;
-}
 
 
 // 내가 찜한 가게 리스트 ===================================
