--- a/src/components/customer/mypage/CustomerReservationList.module.scss
+++ b/src/components/customer/mypage/CustomerReservationList.module.scss
@@ -196,3 +196,48 @@
     transform: rotate(360deg);
   }
 }
+
+@media (max-width: 400px) {
+  .reservationListForm {
+    padding: 20px 10px;
+  }
+
+  .title {
+    height: 50px;
+    font-size: 16px;
+    padding: 5px 10px;
+
+    .titleText {
+      font-size: 18px;
+    }
+  }
+
+  .infoWrapper {
+    padding: 5px;
+    height: calc(100% - 60px);
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+
+  .reservationItem {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+
+    .item {
+      width: 100%;
+      justify-content: space-between;
+
+      span {
+        margin-left: 0;
+      }
+    }
+
+    .reservationStatus {
+      width: 100%;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+}
