--- a/src/components/customer/mypage/PreferredFood.module.scss
+++ b/src/components/customer/mypage/PreferredFood.module.scss
@@ -75,3 +75,19 @@
     }
   }
 }
+
+@media (max-width: 400px) {
+  .infoWrapper {
+    overflow-x: auto;
+    white-space: nowrap;
+
+    .food {
+      display: inline-flex;
+      gap: 20px;
+    }
+
+    li {
+      display: inline-block;
+    }
+  }
+}
