--- a/src/components/customer/mypage/Profile.module.scss
+++ b/src/components/customer/mypage/Profile.module.scss
@@ -1,7 +1,3 @@
-a:link, a:visited {
-  text-decoration: none;
-}
-
 .profileSection {
   display: flex;
   flex-direction: column;
@@ -58,19 +54,16 @@ a:link, a:visited {
 
       .navItem {
         width: 100%;
+        color: #111;
+        padding: 10px 0;
+        display: block;
+        width: 100%;
+        border-radius: .75rem;
+        font-weight: 600;
 
-        .navLink {
-          color: #111;
-          padding: 10px 0;
-          display: block;
-          width: 100%;
-          border-radius: .75rem;
-          font-weight: 600;
-
-          &:hover {
-            color: rgba(8, 10, 8, 1);
-            background: linear-gradient(135deg, #e0eee0, #dff3d8);
-          }
+        &:hover {
+          color: rgba(8, 10, 8, 1);
+          background: linear-gradient(135deg, #e0eee0, #dff3d8);
         }
       }
     }
@@ -106,6 +99,21 @@ a:link, a:visited {
         padding: 20px;
         border-radius: 15px;
       }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .profileSection {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 10;
+    left:-100%;
+    transition: .40s ease-in-out 0s;
+    overflow-y: auto;
+    &.on {
+      left: 0;
     }
   }
 }
