# customerMypage : 반응형 스크롤바 제거

--- a/src/components/customer/mypage/FavoriteStore.module.scss
+++ b/src/components/customer/mypage/FavoriteStore.module.scss
@@ -80,6 +80,10 @@
     overflow-x: auto;
     white-space: nowrap;
 
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
     .store {
       display: inline-flex;
       gap: 20px;
