--- a/src/components/customer/mypage/PreferredFood.module.scss
+++ b/src/components/customer/mypage/PreferredFood.module.scss
@@ -81,6 +81,10 @@
     overflow-x: auto;
     white-space: nowrap;
 
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
     .food {
       display: inline-flex;
       gap: 20px;
