--- a/src/components/customer/mypage/PreferredArea.module.scss
+++ b/src/components/customer/mypage/PreferredArea.module.scss
@@ -51,16 +51,20 @@
 
 @media (max-width: 400px) {
   .infoWrapper {
-    overflow-x: auto; /* 가로 스크롤 활성화 */
-    white-space: nowrap; /* 줄바꿈 방지 */
+    overflow-x: auto;
+    white-space: nowrap;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     .infoList {
-      display: inline-flex; /* 가로 정렬 */
+      display: inline-flex;
       gap: 20px;
     }
 
     .area {
-      display: inline-block; /* 가로 정렬을 위한 인라인 블록 */
+      display: inline-block;
     }
   }
 }
