# customerMyPage : 스타일 수정

--- a/src/components/customer/mypage/PreferredFood.module.scss
+++ b/src/components/customer/mypage/PreferredFood.module.scss
@@ -77,6 +77,9 @@
 }
 
 @media (max-width: 400px) {
+  .preferredFoodForm {
+    padding: 0;
+  }
   .infoWrapper {
     overflow-x: auto;
     white-space: nowrap;
