--- a/src/components/customer/mypage/CustomerReservationList.module.scss
+++ b/src/components/customer/mypage/CustomerReservationList.module.scss
@@ -199,7 +199,7 @@
 
 @media (max-width: 400px) {
   .reservationListForm {
-    padding: 20px 10px;
+    padding: 0;
   }
 
   .title {
@@ -231,6 +231,7 @@
 
       span {
         margin-left: 0;
+        margin-bottom: 5px;
       }
     }
 
