--- a/src/components/customer/mypage/PreferredArea.module.scss
+++ b/src/components/customer/mypage/PreferredArea.module.scss
@@ -32,39 +32,37 @@
     box-sizing: border-box;
     margin-bottom: 10px;
 
-
-      .infoList {
-        display: flex;
-        flex-direction: row;
-        gap: 20px;
-        align-items: center;
-        justify-content: center;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-      }
-      .area li {
-        padding: 5px 0;
-      }
+    .area {
+      display: flex;
+      flex-direction: row;
+      gap: 20px;
+      align-items: center;
+      justify-content: center;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .area li {
+      padding: 5px 0;
+    }
   }
 }
 
 @media (max-width: 400px) {
-  .infoWrapper {
-    overflow-x: auto;
-    white-space: nowrap;
+  .preferredAreaForm {
+    padding: 0;
 
-    &::-webkit-scrollbar {
-      display: none;
-    }
+    .infoWrapper {
+      overflow-x: auto;
+      white-space: nowrap;
 
-    .infoList {
-      display: inline-flex;
-      gap: 20px;
-    }
+      &::-webkit-scrollbar {
+        display: none;
+      }
 
-    .area {
-      display: inline-block;
+      .area {
+        padding: 0 200px;
+      }
     }
   }
 }
