# customer/store 예약내역 아이콘 수정 및 반응형 스타일 수정

--- a/src/components/customer/mypage/FavoriteStore.module.scss
+++ b/src/components/customer/mypage/FavoriteStore.module.scss
@@ -76,6 +76,10 @@
 }
 
 @media (max-width: 400px) {
+  .favoriteStoreForm {
+    padding: 0;
+  }
+
   .infoWrapper {
     overflow-x: auto;
     white-space: nowrap;
