--- a/src/components/store/mypage/ReservationList.module.scss
+++ b/src/components/store/mypage/ReservationList.module.scss
@@ -110,40 +110,60 @@
 
     .imgWrapper {
       position: relative;
+      display: flex;
+      align-items: center;
 
       .imgBox {
-        width: 50px;
+        //width: 50px;
         height: 50px;
+        border-radius: 5px;
+        overflow: hidden;
+        box-shadow: white 0 0 0 2px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         position: relative;
+        gap: 10px;
 
         img {
-          width: 100%;
-          height: 100%;
-          border-radius: 5px;
+          width: 50px;
+          height: 50px;
           object-fit: cover;
           transition: transform 0.5s;
         }
 
+        svg {
+          width: 40px;
+          height: 40px;
+        }
+
         .canceled {
-          color: red;
-          position: absolute;
-          right: 0;
-          bottom: 0;
+          color: #E68a8c;
+          //position: absolute;
+          //right: 0;
+          //bottom: 0;
+        }
+
+        .noshow {
+          color: gray;
+          //position: absolute;
+          //right: 0;
+          //bottom: 0;
         }
 
         .done {
-          color: green;
-          position: absolute;
-          right: 0;
-          bottom: 0;
+          color: #407f3e;
+          //position: absolute;
+          //right: 0;
+          //bottom: 0;
         }
 
         .loading {
-          color: blue;
+          color: #89b449;
           animation: spin 3s linear infinite;
-          position: absolute;
-          right: 0;
-          bottom: 0;
+          //position: absolute;
+          //right: 0;
+          //bottom: 0;
         }
       }
     }
@@ -169,6 +189,8 @@
   }
 }
 
+
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -180,7 +202,7 @@
 
 @media (max-width: 400px) {
   .reservationListForm {
-    padding: 20px 0px 10px 0px;
+    padding: 0;
 
     .title {
       height: 50px;
@@ -209,7 +231,7 @@
 
   .reservationItem {
     gap: 10px;
-    padding: 5px;
+    padding: 10px;
     margin: 5px 0;
     flex-direction: column;
     align-items: flex-start;
