--- a/src/pages/common/Modal.module.scss
+++ b/src/pages/common/Modal.module.scss
@@ -11,6 +11,9 @@
   background-color: rgba(0, 0, 0, 0.4); // 불투명한 배경
 
   .modalContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     color: black;
     background-color: #fefefe;
     margin: 15% auto; // 화면 가운데 배치
@@ -28,7 +31,7 @@
       position: sticky;
       top: 0;
       background: #fff;
-      padding: 10px;
+      padding: 10px 10px 0;
       z-index: 1000; // 높은 z-index로 다른 내용보다 위에 표시
       cursor: pointer;
       display: flex;
@@ -46,9 +49,9 @@
     }
 
     .modalInnerContent {
-      padding: 20px;
+      padding: 0 20px;
       overflow-y: auto; // 세로 스크롤 활성화
-      max-height: calc(70vh - 145px); // 닫기 버튼 높이 제외한 최대 높이 설정
+      max-height: calc(70vh - 40px); // 닫기 버튼 높이 제외한 최대 높이 설정
       text-align: center;
     }
 
@@ -100,7 +103,7 @@
         color: #aaa;
         font-size: 29px;
         font-weight: bold;
-        padding: 0px 10px;
+        padding: 0;
         position: sticky;
         top: 0;
         background: #fff;
@@ -119,7 +122,7 @@
       }
 
       .modalInnerContent {
-        padding: 20px;
+        padding: 0 20px;
         overflow-y: auto; // 세로 스크롤 활성화
         max-height: calc(70vh - 70px); // 닫기 버튼 높이 제외한 최대 높이 설정
         text-align: center;
