fix/section of closeBtn

--- a/src/pages/common/Modal.module.scss
+++ b/src/pages/common/Modal.module.scss
@@ -26,8 +26,7 @@
 
     .close {
       color: #aaa;
-      font-size: 35px;
-      font-weight: bold;
+      font-size: 30px;
       position: sticky;
       top: 0;
       background: #fff;
@@ -37,14 +36,25 @@
       display: flex;
       justify-content: flex-end;
 
-      &:hover,
-      &:focus {
-        color: black;
-        text-decoration: none;
-        cursor: pointer;
-      }
       span{
         padding-right: 13px;
+
+        .closeBtn{
+          background-color: #fff;
+          border-radius: 25px;
+          padding: 5px;
+          height: 35px;
+          width: 35px;
+
+          &:hover,
+          &:focus {
+            color: rgba(45, 45, 45, 0.48);
+            text-decoration: none;
+            cursor: pointer;
+            background-color: rgba(206, 206, 206, 0.61);
+            transition: 0.3s;
+          }
+        }
       }
     }
 
