store-mypage style fixed

--- a/src/pages/store/ScheduleDetailModal.module.scss
+++ b/src/pages/store/ScheduleDetailModal.module.scss
@@ -20,6 +20,7 @@
       color: #fff;
       padding: 15px 35px;
       margin-top: 26px;
+      border: none;
 
       :active {
         color: #666;
@@ -37,6 +38,7 @@
       color: #fff;
       padding: 15px 35px;
       margin-top: 26px;
+      border: none;
 
       &:active {
         color: #666;
