--- a/src/components/mainPage/Arrow.module.scss
+++ b/src/components/mainPage/Arrow.module.scss
@@ -15,7 +15,7 @@
   justify-content: center;
   cursor: pointer;
   position: absolute;
-  z-index: 5;
+  // z-index: 5;
   top: 50%;
   transform: translateY(-50%);
   font-size: 20px;
