--- a/src/components/mainPage/CategoryList.module.scss
+++ b/src/components/mainPage/CategoryList.module.scss
@@ -66,23 +66,6 @@
   right: 10px;
 }
 
-@media (max-width: 1200px) {
-  .categoryItem {
-    flex: 1 1 calc(33.333% - 20px);
-  }
-}
-
-@media (max-width: 800px) {
-  .categoryItem {
-    flex: 1 1 calc(50% - 20px);
-  }
-}
-
-@media (max-width: 500px) {
-  .categoryItem {
-    flex: 1 1 100%;
-  }
-}
 
 
 // 수량 0일 때 회색처리
@@ -107,7 +90,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 72%;
   background: rgba(0, 0, 0, 0.2);
   border-radius: 15px;
   display: flex;
@@ -126,4 +109,27 @@
 
 .categoryItem.low-stock .categoryImage {
   opacity: 0.5; 
+}
+
+
+@media (max-width: 1200px) {
+  .categoryItem {
+    flex: 1 1 calc(33.333% - 20px);
+  }
+}
+
+@media (max-width: 800px) {
+  .categoryItem {
+    flex: 1 1 calc(50% - 20px);
+  }
+}
+
+@media (max-width: 400px) {
+  .list{
+    margin: 0 20px;
+    width: 90%;
+  }
+  .categoryItem {
+    flex: 1 1 100%;
+  }
 }
