#디자인 개선2

--- a/src/components/mainPage/FoodNav.module.scss
+++ b/src/components/mainPage/FoodNav.module.scss
@@ -116,7 +116,7 @@
   position: absolute;
   top: 10px;
   left: 10px;
-  width: 91%;
+  width: 92%;
   height: 72%;
   background: rgba(0, 0, 0, 0.2);
   border-radius: 13px;
@@ -153,6 +153,7 @@
   .storeItem{
     padding-right: 0px;
     width:150px;
+    height: 160px;
   }
 
   .storeItem img {
@@ -164,7 +165,7 @@
     top: 10px;
     left: 10px;
     width: 92%;
-    height: 40%;
+    height: 62%;
     font-size: 15px;
   }
 }
