# PICKEDUP: 리뷰 작성 버튼 생성(임시)

--- a/src/components/customer/mypage/CustomerReservationList.module.scss
+++ b/src/components/customer/mypage/CustomerReservationList.module.scss
@@ -198,6 +198,23 @@
   }
 }
 
+.reviewBtn {
+  background: #EAEDE2;
+  color: #090909;
+  padding: 0.3em 1em;
+  font-size: 16px;
+  border-radius: 0.5em;
+  cursor: pointer;
+  border: 1px solid #e8e8e8;
+  transition: all 0.3s;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+
+  &:active {
+    color: #666;
+    box-shadow: inset 4px 4px 3px #c5c5c5, inset -4px -4px 3px #ffffff;
+  }
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -252,7 +269,7 @@
       align-items: flex-start;
       position: relative;
 
-      .reservationCancelBtn {
+      .reservationCancelBtn, .reviewBtn {
         position: absolute;
         right: 0;
         top: 0;
