feat 선호 음식 추가
- authFetch 적용

--- a/src/pages/customer/modal/AddFavFoodModal.module.scss
+++ b/src/pages/customer/modal/AddFavFoodModal.module.scss
@@ -30,7 +30,7 @@ ul.fav-list {
 
     img {
       width: 100%; // 부모 요소의 너비에 맞추기
-      height: auto; // 비율 유지
+      height: 100%; // 비율 유지
       object-fit: cover;
     }
   }
